--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,9 +3,16 @@
   <display-name>mvcframework</display-name>
 	
 	<servlet> 
-		 <servlet-name>dispatcher</servlet-name>
-		 <servlet-class>com.ch.mvcframework.controller.DispatcherServlet</servlet-class>
-  	</servlet>
+		<servlet-name>dispatcher</servlet-name>
+		<servlet-class>com.ch.mvcframework.controller.DispatcherServlet</servlet-class>
+		<!-- 이 서블릿이 태어난 직후 호출되는 init()생명주기 메서드에 전달할 매개변수와 값을 등록
+				그리고 이 파라미터 변수와 값은 init(ServletConfig config)메서드의 매개변수로 정의된 ServletConfig 로 전달..
+		 -->
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>WEB-INF/servlet-mapping.txt</param-value>
+		</init-param>		 
+	</servlet>
   	<servlet-mapping>
   		<servlet-name>dispatcher</servlet-name>
   		<!-- 앞의 어떤 경로가 오든 상관없으며, 단 확장자가 .do 이면 무조건 DispatcherServlet 을 만나게 됨 -->
